test_case/rust-lang_rust/53748_416404317_79.rs
compile_fail,E0404\nstruct Foo;\nstruct Bar;\n\nimpl Foo for Bar {} // error: `Foo` is not a trait\n